--- a/style_min_width_1200px.css
+++ b/style_min_width_1200px.css
@@ -59,7 +59,7 @@ a:hover {
   background-color: white;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  align-items: center;
   box-shadow: 0 0.3em 1em rgb(45, 52, 54, 0.6);
 }
 .sticky {
@@ -68,39 +68,27 @@ a:hover {
   width: 100%;
   z-index: 100;
 }
-@media screen and (orientation: portrait) {
-  .hamburger{
-    position: absolute;
-    cursor: pointer;
-    outline: none;
-    z-index: 2;
-    padding-left: 0.5em;
-    margin: 0;
-    font-family: "Lato", sans-serif;
-  }
-}
-@media screen nd (orientation: landscape) {
-  .hamburger{
-    position: absolute;
-    cursor: pointer;
-    outline: none;
-    z-index: 2;
-    padding-left: 0.5em;
-    margin: 0;
-    font-family: "Lato", sans-serif;
-  }
+.hamburger{
+  position: absolute;
+  cursor: pointer;
+  outline: none;
+  z-index: 2;
+  padding-left: 1em;
+  font-family: "Lato", sans-serif;
 }
 .cross {
   position: absolute;
   cursor: pointer;
   outline: none;
   z-index: 2;
-  font-size: 2em;
-  padding-left: 0.3em;
+  padding-top: 0.5em;
+  padding-left: 0.5em;
+  font-size: 2.5em;
 }
 .menu-menu-hamburger-container {
-  z-index: -1;
+  z-index: 1;
   font-size: 1em;
+  width: 10em;
   background: white;
   position: absolute;
   font-family: "Lato", sans-serif;
@@ -108,7 +96,7 @@ a:hover {
 .menu-menu-hamburger-container ul {
   margin: 0;
   padding: 0;
-  padding-top: 2.5em;
+  padding-top: 1em;
   list-style-type: none;
   list-style-image: none;
 }
@@ -150,18 +138,28 @@ a:hover {
   height: 1.5em;
 }
 .background_default {
+  background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-CHLille.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0 -20em;
+}
+.background_senat {
   background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-senat-min.jpg');
   background-repeat: no-repeat;
-  background-size: 110%;
+  background-size: contain;
+  background-position: 0 -13em;
+}
+.background_circo {
+  background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-souspref.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0 -5em;
 }
 .logo-bannière {
-  margin-top: 10em;
+  margin-top: 15em;
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-.logo_hda {
-  width: 20em;
 }
 .link-category-bannière {
   display: flex;
@@ -184,89 +182,147 @@ a:hover {
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
   color : white;
-  font-size: 1em;
+  font-size: 1.2em;
   background-color: rgb(0, 0, 0, 0.5);
   border: solid 1px white;
-  margin: 1em 0;
-  width: 15em;
+  width: 11em;
+}
+.logo_hda {
+  width: 27em;
 }
 h1 {
   text-align: center;
-  margin: 4em 0 3em 0;
+  margin: 3em 0 1.5em 0;
   color: white;
+  letter-spacing: 0.2em;
   text-transform: uppercase;
-  font-size: 2.5em;
+  font-size: 3.5em;
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
-  letter-spacing: 2px;
+}
+.div_cookies {
+  background-color: white;
+  z-index: 100;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+.div_cookies p {
+  font-family: "CrimsonText-Regular", serif;
+  color: black;
+  font-size: 1.1em;
+  text-align: justify;
+  padding: 0.5em 2em;
+  margin: 0;
+}
+.ok_div_cookies {
+  cursor: pointer;
+  border: solid 1px #FFC312;
+  background-color: #FFC312;
+  color: black;
+  font-weight: bold;
+  padding: 0 0.8em;
+  margin: 0 1em;
+}
+.politics_div_cookies {
+  border: solid 1px #ed1d32;
+  background-color: #ed1d32;
+  color: black;
+  font-weight: bold;
+  padding: 0 1em;
+  margin: 0 1em;
 }
 /* page content */
 #content {
-  width: 90%;
+  width: 80%;
   background-color: white;
-  padding: 1em;
   margin: auto;
+  padding: 2em;
 }
 .title_last_actu {
   background-color: #ed1d32;
   text-transform: uppercase;
   font-size: 2em;
-  letter-spacing: 2px;
   color: white;
-  text-align: center;
-  margin: 0.5em 0 1em 0;
-  padding: 0 0.5em;
-  text-shadow: 1px 1px 8px black;
-  font-family: "Lato-Regular", sans-serif;
-}
-.mosaic_thumbnails {
-  padding: 0.5em !important;
-  height: 15em !important;
-}
-.thumbnail_article {
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.mosaic_thumbnails .mosaic_title_article {
-  display: block;
-  color: white;
-  background-color: rgb(237, 29, 50, 0.7);
-  text-transform: uppercase;
-  padding: 0.1em 0.3em;
-  font-size: 1.1em;
-  font-weight: bold;
-  font-family: "Lato-Bold", sans-serif;
-}
-.mosaic_category_article {
-  background-color: rgb(102, 102, 153);
-  color: white;
-  text-transform: uppercase;
-  display: block;
-  padding: 0.05em 0.3em;
-  font-size: 1.1em;
-  font-weight: bold;
-  font-family: "Lato-Bold", sans-serif;
-  margin: 0;
-}
-.mosaic_excerpt {
-  display: none
-}
-.title_social {
-  background-color: #8e44ad;
-  text-transform: uppercase;
-  font-size: 2em;
-  color: white;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   text-align: center;
   margin: 1em 0 2em 0;
   padding: 0 1em;
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
 }
-.twitter-timeline {
-  margin-top: 0 !important;
+.mosaic_thumbnails {
+  position: relative;
+  display: block;
+  padding: 0.5em !important;
+  height: auto !important;
+}
+.mosaic_thumbnails .mosaic_title_article {
+  opacity: 0;
+}
+.thumbnail_article {
+  height: 15.5em !important;
+  background-size: cover;
+}
+.mosaic_thumbnails:hover .mosaic_title_article,
+.mosaic_thumbnails:active .mosaic_title_article {
+  opacity: 1;
+}
+.mosaic_thumbnails:hover .mosaic_category_article,
+.mosaic_thumbnails:active .mosaic_category_article {
+  display: none;
+}
+.mosaic_thumbnails .mosaic_title_article {
+  display: inline;
+  color: white;
+  background-color: #ed1d32;
+  text-transform: uppercase;
+  padding: 0.1em 0.8em;
+  font-size: 1.3em;
+  font-weight: bold;
+  font-family: "Lato-Bold", sans-serif;
+}
+.mosaic_category_article {
+  background-color: #666699;
+  color: white;
+  text-transform: uppercase;
+  display: inline;
+  padding: 0.05em 0.8em;
+  font-size: 1.3em;
+  font-weight: bold;
+  font-family: "Lato-Bold", sans-serif;
+}
+.mosaic_excerpt {
+  display: block;
+  position: absolute;
+  background-color: rgb(255, 255, 255, 0.7);
+  color: black;
+  bottom: 0;
+  right: 0;
+  font-size: 1.1em;
+  width: 80%;
+  transition: all 0.3s ease-in;
+  padding: 0 1em;
+  font-family: "CrimsonText-Regular", serif;
+}
+.mosaic_excerpt {
+  opacity: 0;
+}
+.mosaic_thumbnails:hover .mosaic_excerpt,
+.mosaic_thumbnails:active .mosaic_excerpt {
+  opacity: 1;
+}
+.title_social {
+  background-color: #8e44ad;
+  text-transform: uppercase;
+  font-size: 2em;
+  color: white;
+  letter-spacing: 3px;
+  text-align: center;
+  margin: 2em 0;
+  padding: 0 1em;
+  text-shadow: 1px 1px 8px black;
+  font-family: "Lato-Regular", sans-serif;
 }
 .thumbnails{
   display: flex;
@@ -279,7 +335,7 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   padding: 0 1em;
-  font-size: 2em;
+  font-size: 1.8em;
   margin: 2em 0.5em 1em 0.5em;
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
@@ -291,6 +347,9 @@ h1 {
 .previouspostslink {
   margin: 0 0.5em;
 }
+.previouspostslink:hover {
+  font-style: italic;
+}
 .current {
   font-weight: bold;
   margin: 0 0.5em;
@@ -299,33 +358,35 @@ h1 {
 .page {
   margin: 0 0.5em;
 }
+.page:hover {
+  color: #ed1d32;
+}
 .nextpostslink {
   margin: 0 0.5em;
 }
-.cloud_tag_index {
-  padding: 0.5em;
-  text-align: center;
+.nextpostslink:hover {
+  font-style: italic;
 }
 /* footer */
 #footer {
   margin-top: 5em;
-  padding: 1.5em 0;
+  padding: 3em 0;
   background-color: #657381;
   color: black;
 }
 .container_footer {
   max-width: 100vw !important;
   background-color: #d2dae2;
-  box-shadow: 0.7em 1em #6ab04c;
-  margin: 2em;
-  padding: 2em;
+  box-shadow: 1em 1em #6ab04c;
+  margin: 1em;
+  padding: 1em;
   font-family: "CrimsonText-Regular", serif;
   font-size: 1.1em;
   line-height: 1.6em;
 }
 .title-footer {
   font-family: "Lato-Regular", sans-serif;
-  line-height: 1.1em;
+  line-height: 1.5em;
 }
 .chevron-footer {
   font-weight: bold;
@@ -353,14 +414,14 @@ h1 {
 }
 /* category.php */
 .title_category_container {
-  padding: 1em 0;
+  padding: 2em 0;
 }
 .title_category {
   color: white;
   background-color: #666699;
   text-transform: uppercase;
   padding: 0.1em 0.8em;
-  font-size: 2em;
+  font-size: 2.3em;
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
 }
@@ -381,9 +442,11 @@ h1 {
 .category_title_article {
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.3em;
   font-family: "Lato-Bold", sans-serif;
   text-align: right;
+  margin: 0;
+  padding: 0;
 }
 .category_content_article p {
   text-align: justify;
@@ -397,13 +460,13 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   padding: 0.2em 1em;
-  font-size: 1.2em;
+  font-size: 1.3em;
   font-weight: bold;
   margin: 2em 0.5em 1em 0.5em;
   font-family: "Lato-Bold", sans-serif;
 }
 .cloud-tag-category {
-  padding: 0.5em;
+  padding: 0.5em 10em;
   text-align: center;
 }
 /* tag.php */
@@ -413,7 +476,7 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   padding: 0.2em 1em;
-  font-size: 1.5em;
+  font-size: 2em;
   font-weight: bold;
   margin: 1em 0.5em;
   font-family: "Lato-Bold", sans-serif;
@@ -431,48 +494,52 @@ h1 {
   font-family: "Lato-Bold", sans-serif;
 }
 .post_title_article {
-  font-size: 2em;
+  font-size: 2.5em;
   font-weight: bold;
+  letter-spacing: 3px;
   font-family: "Lato-Bold", sans-serif;
 }
 .post_date {
-  font-size: 1em;
+  font-size: 1.2em;
   padding: 0.5em 0;
   font-family: "CrimsonText-Regular", sans-serif;
 }
 .post_content_article {
+  padding: 2em;
   text-align: justify;
-  text-indent: 4em;
-  line-height: 1.8em;
+  text-indent: 5em;
+  line-height: 2.5em;
 }
 .post_content_article p {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   font-family: "CrimsonText-Regular", serif;
   font-size: 1.2em;
 }
+.post_tags_container {
+  padding: 2em;
+  font-family: "CrimsonText-Regular", serif;
+  font-size: 1.1em;
+}
 .col_meme_sujet {
-  border-left: solid 1px black;
-  border-top: none;
-  margin: 0;
+  border-left: 1px solid black;
 }
 .title_col_meme_sujet {
   text-transform: uppercase;
   font-style: italic;
-  font-size: 1.5em;
+  font-size: 1.8em;
   font-family: "Lato-Italic", sans-serif;
-  margin-top: 0;
 }
 .thumbnail_meme_sujet {
-  height: 12em;
+  height: 14em;
   background-repeat: no-repeat;
   background-size: cover;
   margin: 1em 0;
-  padding: 1em;
+  padding: 0 !important;
 }
 .title_thumbnail_meme_sujet {
-  display: block;
+  display: inline;
   color: white;
-  background-color: rgb(237, 29, 50, 0.7);
+  background-color: #ed1d32;
   text-transform: uppercase;
   font-size: 1em;
   font-weight: bold;
@@ -484,6 +551,7 @@ h1 {
   padding: 0.5em 3em;
   text-align: justify;
 }
+
 /* senatrice.php */
 .title_page_senatrice {
   background-color: #833471;
@@ -492,7 +560,7 @@ h1 {
   letter-spacing: 5px;
   color: white;
   text-align: center;
-  margin: 1em 0;
+  margin: 1em 0 2em 0;
   padding: 0.2em 1em;
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
@@ -501,20 +569,22 @@ h1 {
   margin: 1em 4em 1em 2em;
 }
 .info_senatrice {
-  line-height: 1.8em;
+  line-height: 2em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.2em;
+  font-size: 1.3em;
   text-align: justify;
+  padding-top: 1em;
 }
 .text_senatrice p {
-  line-height: 1.8em;
+  padding: 1.5em 2em;
+  line-height: 2em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.2em;
+  font-size: 1.3em;
   text-align: justify;
 }
 .avatar_container_senatrice {
   display: flex;
-  align-items: center;
+  justify-content: center;
   margin: 1em;
 }
 .side_text_senatrice{
@@ -525,8 +595,9 @@ h1 {
 /* mentions-legales.php */
 .title_mentions {
   text-transform: uppercase;
-  font-size: 1.7em;
-  margin: 1em 0;
+  font-size: 2em;
+  letter-spacing: 5px;
+  margin: 1em 0 2em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .subtitle_mentions {
@@ -550,23 +621,25 @@ h1 {
 }
 /* politics.php */
 .container_politics {
-  padding: 0 0.5em;
+  margin: 0 2em;
 }
 .title_politics {
   text-transform: uppercase;
   font-size: 2em;
-  margin: 1em 0;
+  letter-spacing: 5px;
+  margin: 1em 0 2em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .text_politics {
-  line-height: 1.5em;
+  padding: 0em 1em 2em 2em;
+  line-height: 2em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.2em;
+  font-size: 1.3em;
   text-align: justify;
 }
 .subtitle_politics {
   text-transform: uppercase;
-  font-size: 1.5em;
+  font-size: 1.7em;
   padding-left: 1em;
   font-family: "Lato-Bold", sans-serif;
 }
@@ -574,7 +647,7 @@ h1 {
   text-decoration: underline;
 }
 .title_text_politics {
-  font-size: 1.3em;
+  font-size: 1.5em;
   font-family: "Lato-Bold", sans-serif;
 }
 .subtitle_text_politics {
@@ -595,35 +668,35 @@ h1 {
   padding: 0.2em 1em;
   font-size: 2em;
   font-weight: bold;
-  margin: 0.5em 0;
+  margin: 1em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .text_contact-us {
   padding: 1em;
   text-align: justify;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
+  font-size: 1.3em;
 }
 .text_message_sent {
-  padding: 1em;
+  padding: 2em;
   text-align: justify;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
+  font-size: 1.3em;
 }
 .error {
-  padding: 1em;
+  padding: 2em;
   text-align: justify;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
+  font-size: 1.3em;
 }
 .forms {
-  padding: 1em;
+  padding: 2em;
   text-align: justify;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
+  font-size: 1.3em;
 }
 .input_contact {
   margin-bottom: 1em;
