--- a/style_min_width_720px.css
+++ b/style_min_width_720px.css
@@ -59,7 +59,7 @@ a:hover {
   background-color: white;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  flex-wrap: wrap;
   box-shadow: 0 0.3em 1em rgb(45, 52, 54, 0.6);
 }
 .sticky {
@@ -68,27 +68,39 @@ a:hover {
   width: 100%;
   z-index: 100;
 }
-.hamburger{
-  position: absolute;
-  cursor: pointer;
-  outline: none;
-  z-index: 2;
-  padding-left: 1em;
-  font-family: "Lato", sans-serif;
+@media screen and (orientation: portrait) {
+  .hamburger{
+    position: absolute;
+    cursor: pointer;
+    outline: none;
+    z-index: 2;
+    padding-left: 0.5em;
+    margin: 0;
+    font-family: "Lato", sans-serif;
+  }
+}
+@media screen nd (orientation: landscape) {
+  .hamburger{
+    position: absolute;
+    cursor: pointer;
+    outline: none;
+    z-index: 2;
+    padding-left: 0.5em;
+    margin: 0;
+    font-family: "Lato", sans-serif;
+  }
 }
 .cross {
   position: absolute;
   cursor: pointer;
   outline: none;
   z-index: 2;
-  padding-top: 0.5em;
-  padding-left: 0.5em;
-  font-size: 2.5em;
+  font-size: 2em;
+  padding-left: 0.3em;
 }
 .menu-menu-hamburger-container {
-  z-index: 1;
+  z-index: -1;
   font-size: 1em;
-  width: 10em;
   background: white;
   position: absolute;
   font-family: "Lato", sans-serif;
@@ -96,7 +108,7 @@ a:hover {
 .menu-menu-hamburger-container ul {
   margin: 0;
   padding: 0;
-  padding-top: 1em;
+  padding-top: 2.5em;
   list-style-type: none;
   list-style-image: none;
 }
@@ -138,28 +150,18 @@ a:hover {
   height: 1.5em;
 }
 .background_default {
-  background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-CHLille.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 0 -20em;
-}
-.background_senat {
   background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-senat-min.jpg');
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 0 -13em;
-}
-.background_circo {
-  background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-souspref.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 0 -5em;
+  background-size: 110%;
 }
 .logo-bannière {
-  margin-top: 15em;
+  margin-top: 10em;
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+.logo_hda {
+  width: 20em;
 }
 .link-category-bannière {
   display: flex;
@@ -182,115 +184,89 @@ a:hover {
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
   color : white;
-  font-size: 1.2em;
+  font-size: 1em;
   background-color: rgb(0, 0, 0, 0.5);
   border: solid 1px white;
-  width: 15em;
-}
-.logo_hda {
-  width: 27em;
+  margin: 1em 0;
+  width: 11em;
 }
 h1 {
   text-align: center;
-  margin: 3em 0 1.5em 0;
+  margin: 4em 0 3em 0;
   color: white;
-  letter-spacing: 0.2em;
   text-transform: uppercase;
-  font-size: 3.5em;
+  font-size: 2.5em;
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
+  letter-spacing: 2px;
 }
 /* page content */
 #content {
-  width: 80%;
+  width: 90%;
   background-color: white;
+  padding: 1em;
   margin: auto;
-  padding: 2em;
 }
 .title_last_actu {
   background-color: #ed1d32;
   text-transform: uppercase;
   font-size: 2em;
+  letter-spacing: 2px;
   color: white;
-  letter-spacing: 3px;
   text-align: center;
-  margin: 1em 0 2em 0;
-  padding: 0 1em;
+  margin: 0.5em 0 1em 0;
+  padding: 0 0.5em;
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
 }
 .mosaic_thumbnails {
-  position: relative;
-  display: block;
   padding: 0.5em !important;
-  height: auto !important;
-}
-.mosaic_thumbnails .mosaic_title_article {
-  opacity: 0;
+  height: 15em !important;
 }
 .thumbnail_article {
-  height: 15.5em !important;
+  width: 100%;
+  height: 100%;
   background-size: cover;
-}
-.mosaic_thumbnails:hover .mosaic_title_article,
-.mosaic_thumbnails:active .mosaic_title_article {
-  opacity: 1;
-}
-.mosaic_thumbnails:hover .mosaic_category_article,
-.mosaic_thumbnails:active .mosaic_category_article {
-  display: none;
+  background-repeat: no-repeat;
 }
 .mosaic_thumbnails .mosaic_title_article {
-  display: inline;
+  display: block;
   color: white;
-  background-color: #ed1d32;
+  background-color: rgb(237, 29, 50, 0.7);
   text-transform: uppercase;
-  padding: 0.1em 0.8em;
-  font-size: 1.3em;
+  padding: 0.1em 0.3em;
+  font-size: 1.1em;
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
 }
 .mosaic_category_article {
-  background-color: #666699;
+  background-color: rgb(102, 102, 153);
   color: white;
   text-transform: uppercase;
-  display: inline;
-  padding: 0.05em 0.8em;
-  font-size: 1.3em;
+  display: block;
+  padding: 0.05em 0.3em;
+  font-size: 1.1em;
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
+  margin: 0;
 }
 .mosaic_excerpt {
-  display: block;
-  position: absolute;
-  background-color: rgb(255, 255, 255, 0.7);
-  color: black;
-  bottom: 0;
-  right: 0;
-  font-size: 1.1em;
-  width: 80%;
-  transition: all 0.3s ease-in;
-  padding: 0 1em;
-  font-family: "CrimsonText-Regular", serif;
-}
-.mosaic_excerpt {
-  opacity: 0;
-}
-.mosaic_thumbnails:hover .mosaic_excerpt,
-.mosaic_thumbnails:active .mosaic_excerpt {
-  opacity: 1;
+  display: none
 }
 .title_social {
   background-color: #8e44ad;
   text-transform: uppercase;
   font-size: 2em;
   color: white;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   text-align: center;
-  margin: 2em 0;
+  margin: 1em 0 2em 0;
   padding: 0 1em;
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
+}
+.twitter-timeline {
+  margin-top: 0 !important;
 }
 .thumbnails{
   display: flex;
@@ -303,7 +279,7 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   padding: 0 1em;
-  font-size: 1.8em;
+  font-size: 2em;
   margin: 2em 0.5em 1em 0.5em;
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
@@ -315,9 +291,6 @@ h1 {
 .previouspostslink {
   margin: 0 0.5em;
 }
-.previouspostslink:hover {
-  font-style: italic;
-}
 .current {
   font-weight: bold;
   margin: 0 0.5em;
@@ -326,35 +299,33 @@ h1 {
 .page {
   margin: 0 0.5em;
 }
-.page:hover {
-  color: #ed1d32;
-}
 .nextpostslink {
   margin: 0 0.5em;
 }
-.nextpostslink:hover {
-  font-style: italic;
+.cloud_tag_index {
+  padding: 0.5em;
+  text-align: center;
 }
 /* footer */
 #footer {
   margin-top: 5em;
-  padding: 3em 0;
+  padding: 1.5em 0;
   background-color: #657381;
   color: black;
 }
 .container_footer {
   max-width: 100vw !important;
   background-color: #d2dae2;
-  box-shadow: 1em 1em #6ab04c;
-  margin: 1em;
-  padding: 1em;
+  box-shadow: 0.7em 1em #6ab04c;
+  margin: 2em;
+  padding: 2em;
   font-family: "CrimsonText-Regular", serif;
   font-size: 1.1em;
   line-height: 1.6em;
 }
 .title-footer {
   font-family: "Lato-Regular", sans-serif;
-  line-height: 1.5em;
+  line-height: 1.1em;
 }
 .chevron-footer {
   font-weight: bold;
@@ -382,14 +353,14 @@ h1 {
 }
 /* category.php */
 .title_category_container {
-  padding: 2em 0;
+  padding: 1em 0;
 }
 .title_category {
   color: white;
   background-color: #666699;
   text-transform: uppercase;
   padding: 0.1em 0.8em;
-  font-size: 2.3em;
+  font-size: 2em;
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
 }
@@ -410,11 +381,9 @@ h1 {
 .category_title_article {
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 1.3em;
+  font-size: 1.2em;
   font-family: "Lato-Bold", sans-serif;
   text-align: right;
-  margin: 0;
-  padding: 0;
 }
 .category_content_article p {
   text-align: justify;
@@ -428,13 +397,13 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   padding: 0.2em 1em;
-  font-size: 1.3em;
+  font-size: 1.2em;
   font-weight: bold;
   margin: 2em 0.5em 1em 0.5em;
   font-family: "Lato-Bold", sans-serif;
 }
 .cloud-tag-category {
-  padding: 0.5em 10em;
+  padding: 0.5em;
   text-align: center;
 }
 /* tag.php */
@@ -444,7 +413,7 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   padding: 0.2em 1em;
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: bold;
   margin: 1em 0.5em;
   font-family: "Lato-Bold", sans-serif;
@@ -462,52 +431,48 @@ h1 {
   font-family: "Lato-Bold", sans-serif;
 }
 .post_title_article {
-  font-size: 2.5em;
+  font-size: 2em;
   font-weight: bold;
-  letter-spacing: 3px;
   font-family: "Lato-Bold", sans-serif;
 }
 .post_date {
-  font-size: 1.2em;
+  font-size: 1em;
   padding: 0.5em 0;
   font-family: "CrimsonText-Regular", sans-serif;
 }
 .post_content_article {
-  padding: 2em;
   text-align: justify;
-  text-indent: 5em;
-  line-height: 2.5em;
+  text-indent: 4em;
+  line-height: 1.8em;
 }
 .post_content_article p {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   font-family: "CrimsonText-Regular", serif;
   font-size: 1.2em;
 }
-.post_tags_container {
-  padding: 2em;
-  font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
-}
 .col_meme_sujet {
-  border-left: 1px solid black;
+  border-left: solid 1px black;
+  border-top: none;
+  margin: 0;
 }
 .title_col_meme_sujet {
   text-transform: uppercase;
   font-style: italic;
-  font-size: 1.8em;
+  font-size: 1.5em;
   font-family: "Lato-Italic", sans-serif;
+  margin-top: 0;
 }
 .thumbnail_meme_sujet {
-  height: 14em;
+  height: 12em;
   background-repeat: no-repeat;
   background-size: cover;
   margin: 1em 0;
-  padding: 0 !important;
+  padding: 1em;
 }
 .title_thumbnail_meme_sujet {
-  display: inline;
+  display: block;
   color: white;
-  background-color: #ed1d32;
+  background-color: rgb(237, 29, 50, 0.7);
   text-transform: uppercase;
   font-size: 1em;
   font-weight: bold;
@@ -519,7 +484,6 @@ h1 {
   padding: 0.5em 3em;
   text-align: justify;
 }
-
 /* senatrice.php */
 .title_page_senatrice {
   background-color: #833471;
@@ -528,7 +492,7 @@ h1 {
   letter-spacing: 5px;
   color: white;
   text-align: center;
-  margin: 1em 0 2em 0;
+  margin: 1em 0;
   padding: 0.2em 1em;
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
@@ -537,22 +501,20 @@ h1 {
   margin: 1em 4em 1em 2em;
 }
 .info_senatrice {
-  line-height: 2em;
+  line-height: 1.8em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.3em;
+  font-size: 1.2em;
   text-align: justify;
-  padding-top: 1em;
 }
 .text_senatrice p {
-  padding: 1.5em 2em;
-  line-height: 2em;
+  line-height: 1.8em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.3em;
+  font-size: 1.2em;
   text-align: justify;
 }
 .avatar_container_senatrice {
   display: flex;
-  justify-content: center;
+  align-items: center;
   margin: 1em;
 }
 .side_text_senatrice{
@@ -563,9 +525,8 @@ h1 {
 /* mentions-legales.php */
 .title_mentions {
   text-transform: uppercase;
-  font-size: 2em;
-  letter-spacing: 5px;
-  margin: 1em 0 2em 0;
+  font-size: 1.7em;
+  margin: 1em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .subtitle_mentions {
@@ -589,25 +550,23 @@ h1 {
 }
 /* politics.php */
 .container_politics {
-  margin: 0 2em;
+  padding: 0 0.5em;
 }
 .title_politics {
   text-transform: uppercase;
   font-size: 2em;
-  letter-spacing: 5px;
-  margin: 1em 0 2em 0;
+  margin: 1em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .text_politics {
-  padding: 0em 1em 2em 2em;
-  line-height: 2em;
+  line-height: 1.5em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.3em;
+  font-size: 1.2em;
   text-align: justify;
 }
 .subtitle_politics {
   text-transform: uppercase;
-  font-size: 1.7em;
+  font-size: 1.5em;
   padding-left: 1em;
   font-family: "Lato-Bold", sans-serif;
 }
@@ -615,7 +574,7 @@ h1 {
   text-decoration: underline;
 }
 .title_text_politics {
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-family: "Lato-Bold", sans-serif;
 }
 .subtitle_text_politics {
@@ -636,35 +595,35 @@ h1 {
   padding: 0.2em 1em;
   font-size: 2em;
   font-weight: bold;
-  margin: 1em 0;
+  margin: 0.5em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .text_contact-us {
   padding: 1em;
   text-align: justify;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 .text_message_sent {
-  padding: 2em;
+  padding: 1em;
   text-align: justify;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 .error {
-  padding: 2em;
+  padding: 1em;
   text-align: justify;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 .forms {
-  padding: 2em;
+  padding: 1em;
   text-align: justify;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 .input_contact {
   margin-bottom: 1em;
